@@ -4,7 +4,7 @@ COPY pom.xml .
 COPY src ./src
 RUN mvn clean package -DskipTests
 
-FROM eclipse-temurin:24-jre-alpine
+FROM eclipse-temurin:24-jdk-alpine
 WORKDIR /app
 
 RUN addgroup -S spring && adduser -S spring -G spring
@@ -13,4 +13,4 @@ USER spring:spring
 COPY --from=builder /app/target/onlineEncryptionHub-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 8080
 
-ENTRYPOINT ["java", "--add-modules", "jdk.incubator.vector", "-jar", "app.jar"]
+ENTRYPOINT ["java", "--add-modules", "jdk.incubator.vector", "--enable-native-access=ALL-UNNAMED", "-jar", "app.jar"]
